cmake_minimum_required(VERSION 4.1)
project(ics0017)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ics0017
        SelfStudy/MinimalProgram.cpp
        SelfStudy/BasicDataTypes.cpp
        Practice1/Practice1_Ex2.cpp
        Practice1/Practice1_Ex3.cpp
        Practice1/Practice1_Ex4.cpp
        Practice1/Practice1_Ex5.cpp
        Practice1/Practice1_Ex6.cpp
        Practice1/Practice1_Ex7.cpp
        Practice1/Practice1_Ex8.cpp
        Practice1/Practice1_Ex9.cpp
        Practice1/Practice1_Ex10.cpp
        Practice1/Practice1_Ex11.cpp
        Practice1/Practice1_Ex12.cpp
        Practice2/Practice2_Ex1.cpp
        Practice2/Practice2_Ex2.cpp
        Practice2/Practice2_Ex3.cpp
        Practice2/Practice2_Ex4.cpp
        Practice2/Practice2_Ex5.cpp
        Practice2/Practice2_Ex6.cpp
        Practice2/Practice2_Ex7.cpp
        Practice2/Practice2_Ex8_1.cpp
        Practice2/Practice2_Ex8_2.cpp
        Practice2/Practice2_Ex9.cpp
        Practice2/Practice2_Ex10.cpp
        Practice2/Practice2_Ex11.cpp
        Practice2/Practice2_Ex12.cpp
        Practice2/Practice2_Ex13.cpp
        Practice3/Practice3_Ex1.cpp
        Practice3/Practice3_Ex2.cpp
        Practice3/Practice3_Ex3.cpp
        Practice3/Practice3_Ex4.cpp
        Practice3/Practice3_Ex5.cpp
        Practice3/Practice3_Ex6.cpp
        Practice3/Practice3_Ex7.cpp)
