cmake_minimum_required(VERSION 4.1)
project(ics0017)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(ics0017
        SelfStudy/MinimalProgram.cpp
        SelfStudy/BasicDataTypes.cpp
        Practice1/Practice1_Ex2.cpp
        Practice1/Practice1_Ex3.cpp
        Practice1/Practice1_Ex4.cpp
        Practice1/Practice1_Ex5.cpp
        Practice1/Practice1_Ex6.cpp
        Practice1/Practice1_Ex7.cpp
        Practice1/Practice1_Ex8.cpp
        Practice1/Practice1_Ex9.cpp
        Practice1/Practice1_Ex10.cpp
        Practice1/Practice1_Ex11.cpp
        Practice1/Practice1_Ex12.cpp
        Practice2/Practice2_Ex1.cpp
        Practice2/Practice2_Ex2.cpp
        Practice2/Practice2_Ex3.cpp
        Practice2/Practice2_Ex4.cpp
        Practice2/Practice2_Ex5.cpp
        Practice2/Practice2_Ex6.cpp
        Practice2/Practice2_Ex7.cpp
        Practice2/Practice2_Ex8_1.cpp
        Practice2/Practice2_Ex8_2.cpp
        Practice2/Practice2_Ex9.cpp
        Practice2/Practice2_Ex10.cpp
        Practice2/Practice2_Ex11.cpp
        Practice2/Practice2_Ex12.cpp
        Practice2/Practice2_Ex13.cpp
        Practice3/Practice3_Ex1.cpp
        Practice3/Practice3_Ex2.cpp
        Practice3/Practice3_Ex3.cpp
        Practice3/Practice3_Ex4.cpp
        Practice3/Practice3_Ex5.cpp
        Practice3/Practice3_Ex6.cpp
        Practice3/Practice3_Ex7.cpp
        Practice5/Practice5_Ex1.cpp
        Practice5/Practice5_Ex2.cpp
        Practice5/Practice5_Ex3.cpp
        Practice5/Practice5_Ex4.cpp
        Practice5/Practice5_Ex5.cpp
        Practice5/Practice5_Ex6.cpp
        Practice6/Practice6_Ex1.cpp
        Practice6/Practice6_Ex2.cpp
        Practice6/Practice6_Ex3.cpp
        Practice6/Practice6_Ex4.cpp
        Practice6/Practice6_Ex5.cpp
        Practice6/Practice6_Ex6.cpp
        Practice6/Practice6_Ex7.cpp
        Practice6/Practice6_Ex8.cpp
        Practice6/Practice6_Ex9.cpp
        Practice6/Practice6_Ex10.cpp
        Practice6/Practice6_Ex11.cpp
        Practice6/Practice6_Ex12.cpp
        Practice7/Practice7_Ex1.cpp
        Practice7/Practice7_Ex2.cpp
        Practice7/Practice7_Ex3.cpp
        Practice7/Practice7_Ex4.cpp
        Practice7/Practice7_Ex5.cpp
        Practice7/Practice7_Ex6.cpp
        Practice7/Practice7_Ex7.cpp
        Practice7/Practice7_Ex8.cpp
        Practice7/Practice7_Ex9.cpp
        Practice7/Practice7_Ex10.cpp
        Practice7/Practice7_Ex11.cpp
        Practice7/Practice7_Ex12.cpp
        Practice7/Practice7_Ex13.cpp
        SelfStudy/Test2_1.cpp
        SelfStudy/Test2_2.cpp
        SelfStudy/Test2_3.cpp
        SelfStudy/Test2_4.cpp
        Practice9/Practice9_Ex1.cpp
        Practice9/Practice9_Ex2.cpp
        Practice9/Practice9_Ex3.cpp
        Practice9/Practice9_Ex4.cpp
        Practice9/Practice9_Ex5.cpp
        Practice9/Practice9_Ex6.cpp
        Practice10/Practice10_Ex1.cpp
        Practice10/Practice10_Ex2.cpp
        Practice10/Practice10_Ex3.cpp)
